# BeSTS_API

./: .gitignore  Cargo.toml  README.md  Rocket.toml  sqlx-data.json
.github/workflows/: release.yaml
migrations/: 20221008115317_setup.sql  20221023191350_add_worl_cup_2022_teams.sql  20221118210705_add_ranking_view.sql  20221122211904_fix_ranking.sql  20221122214500_fix_ranking_again.sql
src/: main.rs
src/endpoints/: auth_endpoint.rs  bet_endpoint.rs  match_endpoint.rs  mod.rs  room_endpoint.rs  team_endpoints.rs
src/models/: auth.rs  auth_error.rs  bet.rs  error.rs  match.rs  mod.rs  room.rs  score.rs  team.rs  user.rs
src/models/errors/: auth_error.rs  bet_error.rs  match_error.rs  mod.rs  room_error.rs  team_error.rs
src/repositories/: auth_repository.rs  bet_repository.rs  factory.rs  match_repository.rs  mod.rs  room_repository.rs  team_repository.rs
src/utils/: hasher.rs  jwt.rs  mod.rs  password.rs
