[package]
name = "soccer_bet_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
sqlx = { version = "0.5.13", features = ["sqlite", "offline", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
once_cell = "1.14.0"
rust-argon2 = "1.0.0"
serde = "1.0.144"
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.6"
hashids = { git = "https://github.com/charsyam/hashids_rust.git", version = "1.0.0" }
